# EngineBuddy

./: .gitignore  CMakeLists.txt  CrackJPI.py
include/: csv_writer.h  flight_data.h  flights.h  jpi_parser.h  jpi_utils.h
raw_data/: U230419.JPI
sample_data/clean_csv/: 211.csv  212.csv  213.csv  214.csv  215.csv  216.csv  217.csv  218.csv  219.csv  220.csv  221.csv  222.csv  223.csv  224.csv  225.csv  226.csv  227.csv  228.csv  229.csv  230.csv  231.csv  232.csv  233.csv  234.csv  235.csv  236.csv  237.csv  238.csv  239.csv  240.csv  241.csv  242.csv  243.csv  244.csv  245.csv  246.csv  247.csv  248.csv  249.csv  250.csv  (+75 more)
sample_data/jpi_bucket/: U191002.JPI  U191014.JPI
sample_data/raw_csv/: N24569-211.csv  N24569-212.csv  N24569-213.csv  N24569-214.csv  N24569-215.csv  N24569-216.csv  N24569-217.csv  N24569-218.csv  N24569-219.csv  N24569-220.csv  N24569-221.csv  N24569-222.csv  N24569-223.csv  N24569-224.csv  N24569-225.csv  N24569-226.csv  N24569-227.csv  N24569-228.csv  N24569-229.csv  N24569-230.csv  N24569-231.csv  N24569-232.csv  N24569-233.csv  N24569-234.csv  N24569-235.csv  N24569-236.csv  N24569-237.csv  N24569-238.csv  N24569-239.csv  N24569-240.csv  N24569-241.csv  N24569-242.csv  N24569-243.csv  N24569-244.csv  N24569-245.csv  N24569-246.csv  N24569-247.csv  N24569-248.csv  N24569-249.csv  N24569-250.csv  (+75 more)
src/: flight_data.c  flights.c  jpi_decode.c  jpi_utils.c  main.c
